--- a/notebooks/Preparing the GO Annotation Database for Integration.ipynb
+++ b/notebooks/Preparing the GO Annotation Database for Integration.ipynb
@@ -115,8 +115,11 @@
     "# Focus on these columns when displaying the data\n",
     "columns = [0, 1, 4, 5, 12]\n",
     "names = [\n",
-    "    \"subject_prefix\", \"subject_identifier\", \"object_curie\", \n",
-    "    \"reference_curie\", \"taxon_curie\",\n",
+    "    \"subject_prefix\",\n",
+    "    \"subject_identifier\",\n",
+    "    \"object_curie\",\n",
+    "    \"reference_curie\",\n",
+    "    \"taxon_curie\",\n",
     "]\n",
     "\n",
     "df = pd.read_csv(\n",
@@ -276,7 +279,10 @@
     "\n",
     "# Collapse split prefix/identifier columns together into curies\n",
     "brpd.pd_collapse_to_curies(\n",
-    "    df, prefix_column=\"subject_prefix\", identifier_column=\"subject_identifier\", target_column=\"subject_curie\",\n",
+    "    df,\n",
+    "    prefix_column=\"subject_prefix\",\n",
+    "    identifier_column=\"subject_identifier\",\n",
+    "    target_column=\"subject_curie\",\n",
     ")\n",
     "\n",
     "brpd.normalize_curies(df, column=\"object_curie\")\n",
