--- a/notebooks/Preparing the GO Annotation Database for Integration.ipynb
+++ b/notebooks/Preparing the GO Annotation Database for Integration.ipynb
@@ -172,6 +172,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "d3b62b73-6e51-4d74-86f5-1b550134e1b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 rows have invalid identifiers\n"
+     ]
+    }
+   ],
+   "source": [
+    "idx = brpd.validate_identifiers(df, column=\"subject_identifier\", prefix_column=\"subject_prefix\", use_tqdm=True)\n",
+    "\n",
+    "print(f\"{(~idx).sum():,} rows have invalid identifiers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "a7a33717",
    "metadata": {},
    "outputs": [
@@ -190,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8b12dc79-1ae1-40f7-b99c-c5643da2931b",
    "metadata": {},
    "outputs": [
@@ -209,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9dd93e51-16a0-442b-9ec0-95b08b482880",
    "metadata": {},
    "outputs": [
@@ -236,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "06b5680a",
    "metadata": {},
    "outputs": [
@@ -261,7 +281,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>subject_curie</th>\n",
+       "      <th>subject_prefix</th>\n",
+       "      <th>subject_identifier</th>\n",
        "      <th>object_curie</th>\n",
        "      <th>reference_curie</th>\n",
        "      <th>taxon_curie</th>\n",
@@ -270,35 +291,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>uniprot:A0A024RBG1</td>\n",
+       "      <td>uniprot</td>\n",
+       "      <td>A0A024RBG1</td>\n",
        "      <td>go:0003723</td>\n",
        "      <td>go.ref:0000043</td>\n",
        "      <td>ncbitaxon:9606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>uniprot:A0A024RBG1</td>\n",
+       "      <td>uniprot</td>\n",
+       "      <td>A0A024RBG1</td>\n",
        "      <td>go:0005515</td>\n",
        "      <td>pubmed:33961781</td>\n",
        "      <td>ncbitaxon:9606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>uniprot:A0A024RBG1</td>\n",
+       "      <td>uniprot</td>\n",
+       "      <td>A0A024RBG1</td>\n",
        "      <td>go:0008486</td>\n",
        "      <td>go.ref:0000003</td>\n",
        "      <td>ncbitaxon:9606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>uniprot:A0A024RBG1</td>\n",
+       "      <td>uniprot</td>\n",
+       "      <td>A0A024RBG1</td>\n",
        "      <td>go:0016462</td>\n",
        "      <td>go.ref:0000002</td>\n",
        "      <td>ncbitaxon:9606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>uniprot:A0A024RBG1</td>\n",
+       "      <td>uniprot</td>\n",
+       "      <td>A0A024RBG1</td>\n",
        "      <td>go:0016787</td>\n",
        "      <td>go.ref:0000002</td>\n",
        "      <td>ncbitaxon:9606</td>\n",
@@ -308,15 +334,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        subject_curie object_curie  reference_curie     taxon_curie\n",
-       "0  uniprot:A0A024RBG1   go:0003723   go.ref:0000043  ncbitaxon:9606\n",
-       "1  uniprot:A0A024RBG1   go:0005515  pubmed:33961781  ncbitaxon:9606\n",
-       "2  uniprot:A0A024RBG1   go:0008486   go.ref:0000003  ncbitaxon:9606\n",
-       "3  uniprot:A0A024RBG1   go:0016462   go.ref:0000002  ncbitaxon:9606\n",
-       "4  uniprot:A0A024RBG1   go:0016787   go.ref:0000002  ncbitaxon:9606"
+       "  subject_prefix subject_identifier object_curie  reference_curie  \\\n",
+       "0        uniprot         A0A024RBG1   go:0003723   go.ref:0000043   \n",
+       "1        uniprot         A0A024RBG1   go:0005515  pubmed:33961781   \n",
+       "2        uniprot         A0A024RBG1   go:0008486   go.ref:0000003   \n",
+       "3        uniprot         A0A024RBG1   go:0016462   go.ref:0000002   \n",
+       "4        uniprot         A0A024RBG1   go:0016787   go.ref:0000002   \n",
+       "\n",
+       "      taxon_curie  \n",
+       "0  ncbitaxon:9606  \n",
+       "1  ncbitaxon:9606  \n",
+       "2  ncbitaxon:9606  \n",
+       "3  ncbitaxon:9606  \n",
+       "4  ncbitaxon:9606  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,6 +357,185 @@
    "source": [
     "brpd.normalize_prefixes(df, column=\"subject_prefix\")\n",
     "\n",
+    "brpd.normalize_curies(df, column=\"object_curie\")\n",
+    "brpd.normalize_curies(df, column=\"reference_curie\")\n",
+    "brpd.normalize_curies(df, column=\"taxon_curie\")\n",
+    "\n",
+    "df = df[[\"subject_prefix\", \"subject_identifier\", \"object_curie\", \"reference_curie\", \"taxon_curie\"]]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c5b5c49a-5cea-4ec8-b841-723d6ea92e97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     uniprot:A0A024RBG1\n",
+       "1     uniprot:A0A024RBG1\n",
+       "2     uniprot:A0A024RBG1\n",
+       "3     uniprot:A0A024RBG1\n",
+       "4     uniprot:A0A024RBG1\n",
+       "             ...        \n",
+       "95    uniprot:A0A075B6I9\n",
+       "96    uniprot:A0A075B6I9\n",
+       "97    uniprot:A0A075B6I9\n",
+       "98    uniprot:A0A075B6I9\n",
+       "99    uniprot:A0A075B6I9\n",
+       "Length: 100, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brpd.identifiers_to_curies(df, column=\"subject_identifier\", prefix_column=\"subject_prefix\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d55880cc-d0f0-4d18-a3e6-3463a4c9a2a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>object_curie</th>\n",
+       "      <th>reference_curie</th>\n",
+       "      <th>taxon_curie</th>\n",
+       "      <th>subject_curie</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>go:0003723</td>\n",
+       "      <td>go.ref:0000043</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A024RBG1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>go:0005515</td>\n",
+       "      <td>pubmed:33961781</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A024RBG1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>go:0008486</td>\n",
+       "      <td>go.ref:0000003</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A024RBG1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>go:0016462</td>\n",
+       "      <td>go.ref:0000002</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A024RBG1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>go:0016787</td>\n",
+       "      <td>go.ref:0000002</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A024RBG1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>go:0002250</td>\n",
+       "      <td>go.ref:0000043</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A075B6I9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>go:0002376</td>\n",
+       "      <td>go.ref:0000043</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A075B6I9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>go:0005576</td>\n",
+       "      <td>go.ref:0000043</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A075B6I9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>go:0005576</td>\n",
+       "      <td>go.ref:0000044</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A075B6I9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>go:0005576</td>\n",
+       "      <td>go.ref:0000117</td>\n",
+       "      <td>ncbitaxon:9606</td>\n",
+       "      <td>uniprot:A0A075B6I9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   object_curie  reference_curie     taxon_curie       subject_curie\n",
+       "0    go:0003723   go.ref:0000043  ncbitaxon:9606  uniprot:A0A024RBG1\n",
+       "1    go:0005515  pubmed:33961781  ncbitaxon:9606  uniprot:A0A024RBG1\n",
+       "2    go:0008486   go.ref:0000003  ncbitaxon:9606  uniprot:A0A024RBG1\n",
+       "3    go:0016462   go.ref:0000002  ncbitaxon:9606  uniprot:A0A024RBG1\n",
+       "4    go:0016787   go.ref:0000002  ncbitaxon:9606  uniprot:A0A024RBG1\n",
+       "..          ...              ...             ...                 ...\n",
+       "95   go:0002250   go.ref:0000043  ncbitaxon:9606  uniprot:A0A075B6I9\n",
+       "96   go:0002376   go.ref:0000043  ncbitaxon:9606  uniprot:A0A075B6I9\n",
+       "97   go:0005576   go.ref:0000043  ncbitaxon:9606  uniprot:A0A075B6I9\n",
+       "98   go:0005576   go.ref:0000044  ncbitaxon:9606  uniprot:A0A075B6I9\n",
+       "99   go:0005576   go.ref:0000117  ncbitaxon:9606  uniprot:A0A075B6I9\n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Collapse split prefix/identifier columns together into curies\n",
     "brpd.pd_collapse_to_curies(\n",
     "    df,\n",
@@ -331,13 +543,7 @@
     "    identifier_column=\"subject_identifier\",\n",
     "    target_column=\"subject_curie\",\n",
     ")\n",
-    "\n",
-    "brpd.normalize_curies(df, column=\"object_curie\")\n",
-    "brpd.normalize_curies(df, column=\"reference_curie\")\n",
-    "brpd.normalize_curies(df, column=\"taxon_curie\")\n",
-    "\n",
-    "df = df[[\"subject_curie\", \"object_curie\", \"reference_curie\", \"taxon_curie\"]]\n",
-    "df.head()"
+    "df"
    ]
   },
   {
@@ -347,96 +553,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57db3a76",
-   "metadata": {},
-   "source": [
-    "## CURIEs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "64a1c5bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 4 is out of bounds for axis 0 with size 4",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbrpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnormalize_curies\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m df[columns]\u001b[38;5;241m.\u001b[39mhead()\n",
-      "File \u001b[0;32m~/dev/bioregistry/src/bioregistry/pandas.py:124\u001b[0m, in \u001b[0;36mnormalize_curies\u001b[0;34m(df, column, target_column)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnormalize_curies\u001b[39m(\n\u001b[1;32m     92\u001b[0m     df: pd\u001b[38;5;241m.\u001b[39mDataFrame, column: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28mstr\u001b[39m, \u001b[38;5;241m*\u001b[39m, target_column: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     93\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     94\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Normalize CURIEs in a given column.\u001b[39;00m\n\u001b[1;32m     95\u001b[0m \n\u001b[1;32m     96\u001b[0m \u001b[38;5;124;03m    :param df: A dataframe\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    122\u001b[0m \u001b[38;5;124;03m        brpd.normalize_curies(df, column=12)\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 124\u001b[0m     column \u001b[38;5;241m=\u001b[39m \u001b[43m_norm_column\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    125\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m target_column \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    126\u001b[0m         target_column \u001b[38;5;241m=\u001b[39m column\n",
-      "File \u001b[0;32m~/dev/bioregistry/src/bioregistry/pandas.py:61\u001b[0m, in \u001b[0;36m_norm_column\u001b[0;34m(df, column)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_norm_column\u001b[39m(df: pd\u001b[38;5;241m.\u001b[39mDataFrame, column: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m---> 61\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m column \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(column, \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumn\u001b[49m\u001b[43m]\u001b[49m\n",
-      "File \u001b[0;32m~/.virtualenvs/biopragmatics/lib/python3.12/site-packages/pandas/core/indexes/base.py:5389\u001b[0m, in \u001b[0;36mIndex.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   5386\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(key) \u001b[38;5;129;01mor\u001b[39;00m is_float(key):\n\u001b[1;32m   5387\u001b[0m     \u001b[38;5;66;03m# GH#44051 exclude bool, which would return a 2d ndarray\u001b[39;00m\n\u001b[1;32m   5388\u001b[0m     key \u001b[38;5;241m=\u001b[39m com\u001b[38;5;241m.\u001b[39mcast_scalar_indexer(key)\n\u001b[0;32m-> 5389\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mgetitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   5391\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mslice\u001b[39m):\n\u001b[1;32m   5392\u001b[0m     \u001b[38;5;66;03m# This case is separated from the conditional above to avoid\u001b[39;00m\n\u001b[1;32m   5393\u001b[0m     \u001b[38;5;66;03m# pessimization com.is_bool_indexer and ndim checks.\u001b[39;00m\n\u001b[1;32m   5394\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_slice(key)\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 4 is out of bounds for axis 0 with size 4"
-     ]
-    }
-   ],
-   "source": [
-    "brpd.normalize_curies(df, column=4)\n",
-    "\n",
-    "df[columns].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5772c6c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = brpd.validate_curies(df, column=4)\n",
-    "\n",
-    "brpd.summarize_curie_validation(df, idx)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7608be99",
-   "metadata": {},
-   "source": [
-    "## Identifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0faf0720",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = brpd.validate_identifiers(df, column=1, prefix_column=0, use_tqdm=True)\n",
-    "print(f\"{(~idx).sum():,} rows have invalid identifiers\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc2d73f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(~idx).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5691ff03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brpd.identifiers_to_curies(df, column=1, prefix_column=0)\n",
-    "\n",
-    "columns = [c for c in columns if c != 0]  # remove redundant column\n",
-    "\n",
-    "df[columns].head()"
-   ]
   }
  ],
  "metadata": {
