--- a/notebooks/Preparing the GO Annotation Database for Integration.ipynb
+++ b/notebooks/Preparing the GO Annotation Database for Integration.ipynb
@@ -184,7 +184,9 @@
     }
    ],
    "source": [
-    "idx = brpd.validate_identifiers(df, column=\"subject_identifier\", prefix_column=\"subject_prefix\", use_tqdm=True)\n",
+    "idx = brpd.validate_identifiers(\n",
+    "    df, column=\"subject_identifier\", prefix_column=\"subject_prefix\", use_tqdm=True\n",
+    ")\n",
     "\n",
     "print(f\"{(~idx).sum():,} rows have invalid identifiers\")"
    ]
